myteo/test/analyze/type_check/assignment/assign_to_tuple.exp
Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/assign_to_tuple.myte:9:2-6
 9 |   x[0] = 2;
   |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/assign_to_tuple.myte:10:2-6
 10 |   x[1] = 2;
    |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/assign_to_tuple.myte:15:2-6
 15 |   y[0] = 2;
    |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/assign_to_tuple.myte:16:2-6
 16 |   y[1] = 2;
    |   ^^^^